--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,56 +1,46 @@
-<h1>Yummy Burgers</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 text-center" id="top-bar">
+            <img src="/assets/images/burger.png" alt="burger" />
+            <h1> Eat-Da-Burger! </h1>
+        </div>
+        <div class="col-xs-6 text-center" class="task">
+            <div class="row">
+              {{#each burger_data}}
+                  {{#unless this.devoured}}
+                <div class="col-xs-9 text-center">
+                    <pre>{{this.id}}. {{this.burger_name}}
+                    </pre>
+                          <!-- {{this.Date}} -->
+                </div>
+                <div class="col-xs-3 text-center">
+                    <form method="POST" action="/burgers/update?_method=PUT" class="button-size">
+                        <input input type="hidden" type="text" name="burger_id" value={{this.id}}><br>
+                        <button type="submit" class="btn btn-default">Devour it!</button>
+                    </form>
+                </div>
+                {{/unless}}
+              {{/each}}
+            </div>
+        </div>
+        <div class="col-xs-6 text-center" class="task">
+              {{#each burger_data}}
+                  {{#if this.devoured}}
+                      <input class="form-control" type="text" placeholder="{{this.id}} . {{this.burger_name}}" readonly>
+                {{/if}}
+              {{/each}}
+        </div>
+    </div>
+</div>
 
-<h2>Burgers in the Window!</h2>
-
-<ul>
-  {{#each burgers}}
-    {{#unless this.devour}}
-      <li>
-        {{this.name}}
-
-        <form action="/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="devour" value="true">
-          <button type="submit">Add me to your lunch!</button>
-        </form>
-
-        {{> burgers/delete-burger}}
-      </li>
-    {{/unless}}
-  {{/each}}
-</ul>
-
-<h2>Burgers to Eat!</h2>
-
-<ul>
-  {{#each burgers}}
-    {{#if this.devour}}
-      <li>
-        {{this.name}}
-
-        <form action="/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="devour" value="false">
-          <button type="submit">Eat Me!</button>
-        </form>
-
-        {{> burgers/delete-burger}}
-      </li>
-    {{/if}}
-  {{/each}}
-</ul>
-
-<h2>Add a Burger</h2>
-<form class="create-update-form" action="/" method="POST">
-
-  <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
-  </div>
-
-  <div class="form-group">
-    <label for="eaten">Eaten?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Eaten!<br>
-    <input type="radio" name="sleepy" value="0"> To Be Eaten!
-  </div>
-
-  <button type="submit">Add Burger</button>
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 text-center enter_section">
+            <form action="/burgers/create" method="POST">
+                <input type="text" class="form-control" name="burger_name" value="" id="enter_text">
+                <button type="submit" class="btn btn-primary" id="text-enter-button">Submit</button>
+            </form>
+            <p>Enter a burger you want to eat Click the "Submit" button.</p>
+        </div>
+    </div>
+</div>
