--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 text-center" id="top-bar">
-            <img src="../public/assets/img/cheeseburger.png" alt="burger" />
+            <img src="http://vectips.com/wp-content/uploads/2016/02/25.jpg" alt="burger" />
             <h1> Eat-Da-Burger! </h1>
         </div>
         <div class="col-xs-6 text-center" class="task">
